--- a/src/app/zoom/zoom.component.html
+++ b/src/app/zoom/zoom.component.html
@@ -1,5 +1,7 @@
 <div>
   <svg width="501" height="501" viewBox="0 0 501 501" #svgGrid>
+  <!-- <svg width="501" height="501" viewBox="50 0 501 501" #svgGrid> -->
+  <!-- <svg width="501" height="501" viewBox="0 0 501 501" #svgGrid> -->
     <defs>
      <pattern id="smallGrid" width="10" height="10" patternUnits="userSpaceOnUse">
        <path d="M 10 0 L 0 0 0 10" fill="none" stroke="gray" stroke-width="0.5"/>
@@ -11,7 +13,10 @@
    </defs>
    <rect width="501" height="501" fill="url(#grid)" />
 
-   <circle [ngStyle]="circleStyle" cx="0" cy="0" r="25" #svgCircle />
+   <!-- <circle [ngStyle]="circleStyle" cx="0" cy="0" r="25" #svgCircle /> -->
+   <!-- <circle cx="250" cy="250" r="25" #svgCircle /> -->
+   <circle cx="50" cy="50" r="50" fill="blue" />
+   <circle attr.cx="{{ svgLayer.positionX }}" attr.cy="{{ svgLayer.positionY }}" r="25" style="fill:red" #svgCircle />
  </svg>
 
  <!-- <svg width="501" height="501" viewBox="0 0 501 501" ></svg> -->
