--- a/src/app/zoom/zoom.component.html
+++ b/src/app/zoom/zoom.component.html
@@ -1,5 +1,7 @@
 <div>
-  <svg width="501" height="501" viewBox="0 0 501 501" #svgGrid>
+  <!-- <svg viewBox="0 0 501 501" style="background-color:red" #svgGrid> -->
+  <svg width="501" height="501" viewBox="0 0 501 501" preserveAspectRatio="xMidYMid" #svgGrid>
+    <!-- <svg viewBox="0 0 501 501" #svgGrid> -->
   <!-- <svg width="501" height="501" viewBox="50 0 501 501" #svgGrid> -->
   <!-- <svg width="501" height="501" viewBox="0 0 501 501" #svgGrid> -->
     <defs>
