--- a/src/app/zoom/zoom.component.html
+++ b/src/app/zoom/zoom.component.html
@@ -4,27 +4,34 @@
     <!-- <svg viewBox="0 0 501 501" #svgGrid> -->
   <!-- <svg width="501" height="501" viewBox="50 0 501 501" #svgGrid> -->
   <!-- <svg width="501" height="501" viewBox="0 0 501 501" #svgGrid> -->
-    <defs>
-     <pattern id="smallGrid" width="10" height="10" patternUnits="userSpaceOnUse">
-       <path d="M 10 0 L 0 0 0 10" fill="none" stroke="gray" stroke-width="0.5"/>
-     </pattern>
-     <pattern id="grid" width="100" height="100" patternUnits="userSpaceOnUse">
-       <rect width="100" height="100" fill="url(#smallGrid)"/>
-       <path d="M 100 0 L 0 0 0 100" fill="none" stroke="gray" stroke-width="1"/>
-     </pattern>
-   </defs>
-   <rect width="501" height="501" fill="url(#grid)" />
+  <defs>
+    <pattern id="smallGrid" width="10" height="10" patternUnits="userSpaceOnUse">
+      <path d="M 10 0 L 0 0 0 10" fill="none" stroke="gray" stroke-width="0.5"/>
+    </pattern>
+    <pattern id="grid" width="100" height="100" patternUnits="userSpaceOnUse">
+      <rect width="100" height="100" fill="url(#smallGrid)"/>
+      <path d="M 100 0 L 0 0 0 100" fill="none" stroke="gray" stroke-width="1"/>
+    </pattern>
+  </defs>
+  <rect width="501" height="501" fill="url(#grid)" />
 
-   <!-- <circle [ngStyle]="circleStyle" cx="0" cy="0" r="25" #svgCircle /> -->
-   <!-- <circle cx="250" cy="250" r="25" #svgCircle /> -->
-   <circle cx="50" cy="50" r="50" fill="blue" />
-   <circle attr.cx="{{ svgLayer.positionX }}" attr.cy="{{ svgLayer.positionY }}" r="25" style="fill:red" #svgCircle />
- </svg>
+  <!-- <circle [ngStyle]="circleStyle" cx="0" cy="0" r="25" #svgCircle /> -->
+  <!-- <circle cx="250" cy="250" r="25" #svgCircle /> -->
+  <!-- <circle cx="50" cy="50" r="50" fill="blue" /> -->
+    <rect attr.x="{{ svgLayer.positionX - 50 }}" attr.y="{{ svgLayer.positionY - 50 }}" width="100" height="100" stroke="black" stroke-width="0" fill="blue" />
+    <circle attr.cx="{{ svgLayer.positionX }}" attr.cy="{{ svgLayer.positionY }}" r="25" style="fill:red" #svgCircle />
 
- <!-- <svg width="501" height="501" viewBox="0 0 501 501" ></svg> -->
+    <g *ngFor="let svgLayer of svgLayers">
+    </g>
+  </svg>
 
 </div>
 
-<div>
-  <button mat-raised-button (click)="move()" color="primary">Click</button>
-</div>
+<br>
+<br>
+<br>
+
+<!--  -->
+<!--  -->
+<!--  -->
+<!--  -->
