--- a/src/app/grid2/grid2.component.html
+++ b/src/app/grid2/grid2.component.html
@@ -30,7 +30,7 @@
         <feDropShadow dx="4" dy="4" stdDeviation="0" flood-color="rgba(0, 0, 0, .5)" flood-opacity="0.7"/>
       </filter>
     </defs>
-    <g *ngFor="let svgLayer of svgLayers" #svgLayerGroup>
+    <g *ngFor="let svgLayer of svgLayers">
       <rect
         (pointerdown)="downHandleSVGLayer($event, svgLayer)"
         (click)="clickHandleSVGLayer($event, svgLayer)"
@@ -44,12 +44,14 @@
         stroke="black"
         stroke-width="0.1"
         attr.fill="{{ svgLayer.color }}"
-        attr.filter="{{ svgLayer.shadowFilter }}"
-        [ngClass]="rectClass">
+        attr.filter="{{ svgLayer.shadowFilter }}">
       </rect>
 
-      <!-- leftside of rect -->
-      <circle
+      <!-- ConnectionNode -->
+      <!-- <circle
+        (pointerdown)="downHandleArrow($event, svgLayer)"
+        (pointerup)="upHandleArrow($event, svgLayer)"
+        (pointermove)="moveHandleArrow($event, svgLayer)"
         attr.cx="{{ svgLayer.positionX - svgLayer.width / 2 }}"
         attr.cy="{{ svgLayer.positionY }}"
         r="10"
@@ -58,15 +60,60 @@
         fill="white">
       </circle>
 
-      <!-- Rightside of rect -->
       <circle
+        (pointerdown)="downHandleArrow($event, svgLayer)"
+        (pointerup)="upHandleArrow($event, svgLayer)"
+        (pointermove)="moveHandleArrow($event, svgLayer)"
         attr.cx="{{ svgLayer.positionX + svgLayer.width / 2 }}"
         attr.cy="{{ svgLayer.positionY }}"
         r="10"
         stroke="black"
         stroke-width="1.0"
         fill="white">
-      </circle>
+      </circle> -->
+
+      <g *ngFor="let connectionNode of svgLayer.connectionNodes">
+        <circle
+          (pointerdown)="downHandleArrow($event, svgLayer, connectionNode)"
+          (pointerup)="upHandleArrow($event, svgLayer, connectionNode)"
+          (pointermove)="moveHandleArrow($event, svgLayer, connectionNode)"
+          attr.cx="{{ connectionNode.cx }}"
+          attr.cy="{{ connectionNode.cy }}"
+          attr.r="{{ connectionNode.r }}"
+          attr.stroke="{{ connectionNode.stroke }}"
+          attr.stroke-width="{{ connectionNode.strokeWidth }}"
+          attr.fill="{{ connectionNode.fill }}">
+        </circle>
+
+        <g *ngFor="let connection of connectionNode.connections">
+          <path
+            attr.d="
+              M{{connection.startPointX}},{{connection.startPointY}}
+              Q{{connection.controlPointX}},{{connection.controlPointY}}
+              {{connection.centerPointX}},{{connection.centerPointY}}
+              T{{connection.endPointX}},{{connection.endPointY}}"
+            fill="none"
+            attr.stroke="{{connection.color}}"
+            stroke-width="5"/>
+        </g>
+
+      </g>
+
+
+
+
+
+      <!-- <g *ngFor="let svgLayerPath of svgLayerPaths">
+        <path
+          attr.d="
+            M{{svgLayerPath.startPointX}},{{svgLayerPath.startPointY}}
+            Q{{svgLayerPath.controlPointX}},{{svgLayerPath.controlPointY}}
+            {{svgLayerPath.centerPointX}},{{svgLayerPath.centerPointY}}
+            T{{svgLayerPath.endPointX}},{{svgLayerPath.endPointY}}"
+          fill="none"
+          attr.stroke="{{svgLayerPath.color}}"
+          stroke-width="5"/>
+      </g> -->
 
     </g>
     <!--  -->
@@ -87,17 +134,34 @@
 <br>
 <br>
 
-<!-- <svg viewBox="0 0 200 200">
-  <defs>
-    <filter id="feDropShadow">
-      <feDropShadow/>
-    </filter>
-    <filter id="feDropShadow1">
-      <feDropShadow dx="3" dy="3" stdDeviation="0" flood-color="blue" flood-opacity="0.5"/>
-    </filter>
-  </defs>
-  <g fill="rgba(255,0,0,0.5)" stroke="orange" stroke-width="8">
-    <circle filter="url(#feDropShadow)" cx="50" cy="50" r="40"/>
-    <circle filter="url(#feDropShadow1)" cx="150" cy="150" r="40"/>
+
+
+<svg width="12cm" height="6cm" viewBox="0 0 1200 600"
+     xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <title>Example quad01 - パスデータにおける二次ベジェ命令</title>
+  <desc>"Q" と "T" 命令を制御点と端点を示して図解</desc>
+  <rect x="1" y="1" width="1198" height="598" fill="none" stroke="blue" stroke-width="1" />
+
+  <path d="M200,300 Q400,50 600,300 T1000,300" fill="none" stroke="red" stroke-width="5"  />
+  
+  <path d="M200,300 20,110 1000,300" stroke="black" fill="none" id="controlPath"/>
+  <path d="M200,300 Q20,110 1000,300" stroke="green" fill="none" id="curve"/>
+
+  <!-- 端点 -->
+  <g fill="black" >
+    <circle cx="200" cy="300" r="10" style="fill:red"/>
+    <circle cx="600" cy="300" r="10" style="fill:red"/>
+    <circle cx="1000" cy="300" r="10" style="fill:red"/>
   </g>
-</svg> -->
+  <!-- 制御点および端点から制御点への線 -->
+
+  <g fill="#888888" >
+    <circle cx="400" cy="50" r="10" style="fill:blue"/>
+    <circle cx="800" cy="550" r="10" style="fill:blue"/>
+  </g>
+  <path
+    d="M200,300 L400,50 L600,300 L800,550 L1000,300"
+    fill="none" stroke="#888888" stroke-width="2" />
+</svg>
+
+<!-- http://yamatyuu.net/computer/html/svg/bezier2.html -->
