--- a/src/app/grid2/grid2.component.scss
+++ b/src/app/grid2/grid2.component.scss
@@ -1,10 +1,16 @@
-.rect {
-    box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
-    transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: block;
-    position: relative;
-    padding: 16px;
-    border-radius: 4px;
-    background: #fff;
-    color: rgba(0,0,0,.87);
+circle {
+  fill:#fff;
+  -webkit-transition: fill 0.3s ease-out;
+  -moz-transition: fill 0.3s ease-out;
+  -o-transition: fill 0.3s ease-out;
+  -ms-transition: fill 0.3s ease-out;
+  transition: fill 0.3s ease-out;
 }
+
+circle:hover{
+  fill:rgb(189, 214, 247);
+}
+
+// rect:hover{
+//   fill:rgba(227, 227, 227);
+// }
